<?xml version="1.0"?>
<package>
  <name>rcll_fawkes_sim_msgs</name>
  <version>0.2.1</version>
  <description>Message definitions to access RCLL simulation via Fawkes stack</description>

  <author>Tim Niemueller</author>
  <maintainer email="niemueller@kbsg.rwth-aachen.de">Tim Niemueller</maintainer>

  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- <url type="website">http://wiki.ros.org/rcll_fawkes_sim_msgs</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>fawkes_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>fawkes_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
